# buzz

./: .gitignore  README.md  integration_guide.md  requirements.txt  srm.py
backend/: CMakeLists.txt
backend/include/: battery.hpp  cli.hpp  cpu.hpp  disk.hpp  memory.hpp  network.hpp  processes.hpp  snapshot.hpp
backend/src/: battery.cpp  cli.cpp  cpu.cpp  disk.cpp  main.cpp  memory.cpp  network.cpp  processes.cpp  snapshot.cpp  tui_main.cpp
buzz/: buzz  buzz.desktop  package.sh  run.sh
frontend/: UI Palette.xml  gauge.py  loadui.py  main.py  ref.py  srm.py  srm.ui  tempCodeRunnerFile.py
